2016-11-23  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (GMP_CMP): New macro.
	(mpz_sgn, mpz_cmp_si, mpz_cmp_ui, mpz_cmpabs_ui): Use it.

2016-11-22  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-invert.c (test_3by2, test_2by1): New functions,
	extracted from testmain.
	(testmain): Add test with inputs which triggered the
	mpn_invert_3by2 bug (see 2016-11-16 entry).

2016-11-20  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-signed.c: Reorganize testcase, to avoid undefined
	behaviour with signed overflow.

2016-11-19  Niels Möller  <nisse@lysator.liu.se>

	* tests/run-tests: Set up LD_LIBRARY_PATH and DYLD_LIBRARY_PATH
	for tests only, based on TEST_LIBRARY_PATH.

	* tests/mini-random.h: Use name "../mini-gmp.h" for include, so we
	don't need any -I options to the compiler.

	* tests/Makefile: Pass CFLAGS to the linker, as
	recommended by the GNU coding standard.
	(CPPFLAGS): New variable, with empty default value.
	(CFLAGS): Remove the -I flag involving MINI_GMP_DIR, to leave free
	for overriding on make command line.
	(EXTRA_CFLAGS): Deleted variable, no longer needed.

2016-11-18  Torbjörn Granlund  <tg@gmplib.org>

	* tests/Makefile: Pass EXTRA_CFLAGS to linker as a intermediate fix.

2016-11-16  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_invert_3by2): Fix arithmetic overflow
	bug, and improve documentation of the algorithm.

2016-11-15  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-limbs.c (testmain): Skip tests with zero product.

	* tests/hex-random.c (hex_random_init): Added fflush call.

2016-11-15  Torbjörn Granlund  <tg@gmplib.org>

	* tests/Makefile (TESTS): New variable, allowing separation of
	compilation and running of tests.
	* tests/run-tests: Allow empty tests list.

2016-11-01  Torbjörn Granlund  <tg@gmplib.org>

	* tests/hex-random.c: Reinstate gmp.h inclusion.

2016-08-22  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_set_str_other): Always return size >= 1, with